2000-02-06  Stefan Monnier  <monnier@cs.yale.edu>

	* font-lock.el (font-lock-keywords): Fix doc for multiline matches.
	(font-lock-add-keywords): Make it work even if font-lock-mode is nil,
	so that it can be used more easily in <foo>-mode-hook.  Also make sure
	to avoid duplicate entries.
	(font-lock-update-removed-keyword-alist): Renamed `major-mode'->`mode'.
	(font-lock-remove-keywords): Just as was done for `add', allow it to
	work even if font-lock-mode is nil.  Also make sure we don't modify
	any pre-existing list by forcing a copy-sequence.  Finally rename
	`major-mode' to `mode'.
	(font-lock-fontify-syntactic-anchored-keywords)
	(font-lock-fontify-anchored-keywords)
	(font-lock-fontify-keywords-region): Use line-end-position.
	Don't make `font-lock-multiline' local (it's now done in
	font-lock-set-defaults).
	(font-lock-set-defaults): Make `font-lock-multiline' local.  Also
	move the `font-lock-fontified' creation to inside the `unless'.

2000-02-06  Andrew Innes  <andrewi@gnu.org>

	* term/w32-win.el (x-handle-args): Comment out call to message,
	which occurs before window system is initialized.

	* makefile.nt: Add support for recompiling lisp code.

2000-02-04  Dave Love  <fx@gnu.org>

	* bindings.el (mode-line-mule-info): Fix/extend last change.

	* completion.el: Replace completion-dolist with dolist.

	* tar-mode.el: Replace tar-dolist, tar-dotimes with dolist,
	dotimes.

2000-02-04  Carsten Dominik  <dominik@strw.leidenuniv.nl>

	* textmodes/reftex.el (reftex-compile-variables): regexp-quote the
	environment names before they go into the section regexp.

	* textmodes/reftex-global.el (reftex-change-label): add `A-Z' to
	char class in regexp.

	* textmodes/reftex-parse.el (reftex-with-special-syntax): Bind
	`case-fold-search' to nil.

	* progmodes/idlwave.el (idlwave-template): Respect
	`idlwave-abbrev-change-case'.
	(idlwave-rw-case, idlwave-elif, idlwave-case, idlwave-for,
	idlwave-if, idlwave-procedure, idlwave-function, idlwave-repeat,